0.13
    
    Added scicit learn as dependency
    Added Support Vector Machine learning functionality
    Added Support Vector Machine prediction functionality


0.12

    Now five independent grids per Pythonic instance
    Jumping between grid possible (basic return element)

0.11

    REST element implemented
    Separate scroll area for parking elements

0.10

    Required pythonic_binance changed
    Removed depency dateparser
    Installation instructions updated

0.9

    E-Mail connectivity element added
    Fixed bug in basic return element under windows
    Removed Python 3.5 from supported versions
    
0.8

    Design updated
    Depencies changed
    Bug fixed: activating elements from parking area
    in fastpath mode

0.7

    Minder removed
    Fastpath active when clicking on RUN mode

0.6
    
    Basic Stack element added
    Miner updated


0.5

    Basic-TA: Parameter in column name makes it now
    possible to calculate several figures of the
    same type

0.4

    Fixed bug when using the parking area for 
    programming elements

0.3
    
    Fixed problem with pip3 package starting from 
    windows Python interpreter
